@@ -1,8 +1,6 @@
 /*
- * builtintypes.h
- *
- *  Created on: 29.09.2013
- *      Author: Rene Hartmann
+ * Copyright (C) 2013-2015 Rene Hartmann.
+ * See the file COPYING for redistribution information.
  */
 
 #ifndef BUILTINTYPES_H_
@@ -49,7 +47,8 @@ RDB_EXTERN_VAR RDB_type RDB_LOCK_NOT_GRANTED_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_DEADLOCK_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_RESOURCE_NOT_FOUND_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_INTERNAL_ERROR;
-RDB_EXTERN_VAR RDB_type RDB_FATAL_ERROR;
+RDB_EXTERN_VAR RDB_type RDB_DATA_CORRUPTED_ERROR;
+RDB_EXTERN_VAR RDB_type RDB_RUN_RECOVERY_ERROR;
 RDB_EXTERN_VAR RDB_type RDB_SYSTEM_ERROR;
 
 RDB_EXTERN_VAR RDB_type RDB_SYNTAX_ERROR;
